--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -47,11 +47,11 @@
                 <img src="burger-bar.png" alt="">
             </div>
             <select name="" class="drop-down">
-                <option value="">For Businesses</option>
-                <option value="">Select1</option>
+                <option value="">For Study</option>
+<!--                 <option value="">Select1</option>
                 <option value="">Select2</option>
                 <option value="">Select3</option>
-                <option value="">Select4</option>
+                <option value="">Select4</option> -->
             </select>
             <a class="login" href="/login"><button>Login</button></a>
         </div>
